--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "taas",
   "version": "0.1.0",
+  "homepage": "https://rosenade.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.9.7",
